--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
-body {
-  font-family: sans-serif;
+#root {
+  width: 100%;
   display: flex;
   flex-direction: column;
+  font-family: sans-serif;
 }
 
 canvas#display {
@@ -9,4 +10,5 @@ canvas#display {
   margin: 0 auto;
   border: 1px solid #000;
   image-rendering: pixelated;
+  background: white;
 }
