--- a/src/components/ImageDisplay.css
+++ b/src/components/ImageDisplay.css
@@ -1,4 +1,62 @@
 .image_display {
-	width: 50%;
 	margin: 0 auto;
+	gap: 0.2em;
+}
+
+.freecell_header {
+	display: flex;
+	flex-direction: row;
+	margin-bottom: 1em;
+}
+.card_storage, .card_depot {
+	height: fit-content;
+	width: 45%;
+	display: flex;
+	flex-direction: row;
+}
+.freecell_header > span {
+	width: 10%;
+	text-align: center;
+	align-content: center;
+	font-size: 2em;
+}
+
+.card_slot {
+	width: 64px;
+	height: 96px;
+	display: flex;
+	border: 1px dotted gray;
+	margin: 4px;
+}
+
+@media (prefers-color-scheme: light) {
+	.card_slot {
+		border-color: black;
+	}
+}
+.card_slot > span {
+	margin: auto;
+	text-align: center;
+	align-items: center;
+	font-size: 2em;
+}
+
+.card_board {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	gap: 0.2em;
+	padding-bottom: 60px;
+}
+
+.card_column {
+	display: flex;
+	flex-direction: column;
+	gap: 0.2em;
+	width: 64px;
+	min-height: 96px;
+}
+
+.card {
+	margin-bottom: -60px;
 }
