--- a/src/components/ImageDisplay.css
+++ b/src/components/ImageDisplay.css
@@ -15,7 +15,7 @@
 	flex-direction: row;
 }
 .freecell_header > span {
-	width: 10%;
+	width: 64px;
 	text-align: center;
 	align-content: center;
 	font-size: 2em;
@@ -62,6 +62,7 @@
 .card {
 	margin-bottom: -60px;
 	width: 100%;
+	user-select: none;
 }
 .card_slot > .card {
 	margin: 0;
