--- a/src/components/ImageDisplay.css
+++ b/src/components/ImageDisplay.css
@@ -1,16 +1,17 @@
 .image_display {
 	margin: 0 auto;
 	gap: 0.2em;
+	user-select: none;
 }
 
 .freecell_header {
 	display: flex;
 	flex-direction: row;
+	flex-wrap: wrap;
 	margin-bottom: 1em;
 }
 .card_storage, .card_depot {
 	height: fit-content;
-	width: 45%;
 	display: flex;
 	flex-direction: row;
 }
@@ -22,8 +23,8 @@
 }
 
 .card_slot {
-	width: 64px;
-	height: 80px;
+	width: 62px;
+	height: 84px;
 	display: flex;
 	border: 1px dotted gray;
 	border-radius: 2px;
@@ -55,14 +56,12 @@
 	display: flex;
 	flex-direction: column;
 	gap: 0.2em;
-	width: 64px;
 	min-height: 96px;
 }
 
-.card {
-	margin-bottom: -60px;
+.card_column .card {
+	margin-bottom: -90%;
 	width: 100%;
-	user-select: none;
 }
 .card_slot > .card {
 	margin: 0;
